# GEA_QDAP_adaptive_and_deduplication_new

./: BUGFIX_T_DATASETS.md  README.md  pyproject.toml  run_test.sbatch
GEA_GQAP_Python/gea_gqap_python/: algorithm.py
gea_gqap_adaptive_python/: verify_t13_t14_hypotheses.py
gea_gqap_adaptive_python/gea_gqap_adaptive_python/: algorithm.py  algorithm_adaptive.py  heuristics.py  utils.py
gea_gqap_adaptive_python/tests/: test_cost_and_init.py  test_parsing_and_iteration.py
gea_gqap_adaptive_python/tests/test_20250301/: run_comparison_test.py
